// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SynthEngine > Audio Graph Snapshots > should match ELECTRIC voice audio graph structure 1`] = `
{
  "bufferSources": 0,
  "delays": 0,
  "filters": 1,
  "gains": 3,
  "oscillators": 2,
  "waveShapers": 0,
}
`;

exports[`SynthEngine > Audio Graph Snapshots > should match OVERDRIVE voice audio graph structure 1`] = `
{
  "bufferSources": 1,
  "delays": 1,
  "filters": 6,
  "gains": 5,
  "oscillators": 0,
  "waveShapers": 1,
}
`;

exports[`SynthEngine > Audio Graph Snapshots > should match PLUCKED voice audio graph structure 1`] = `
{
  "bufferSources": 1,
  "delays": 1,
  "filters": 5,
  "gains": 5,
  "oscillators": 0,
  "waveShapers": 0,
}
`;

exports[`SynthEngine > Audio Graph Snapshots > should match RETRO voice audio graph structure 1`] = `
{
  "bufferSources": 0,
  "delays": 0,
  "filters": 2,
  "gains": 2,
  "oscillators": 1,
  "waveShapers": 0,
}
`;

exports[`SynthEngine > Audio Graph Snapshots > should match distortion curve shape 1`] = `
{
  "center": 0,
  "firstQuarter": -1.687877893447876,
  "length": 44100,
  "max": 1.723779559135437,
  "min": -1.723779559135437,
  "thirdQuarter": 1.687877893447876,
}
`;
